Because I made this like today, I'm going to give a very non-descriptive commit message

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
 
   // Map from global var to bool specifying if it can be redefined
   "globals": {
+    "console": false,
+    "require": false
   },
 
   "rules": {
